--- a/src/app/templates/about.html
+++ b/src/app/templates/about.html
@@ -58,7 +58,7 @@
                     
                     <h3 class="mt-4">Getting Started</h3>
                     <p>
-                        Ready to analyze your sailing performance? <a href="{{ url_for('auth.register') }}">Create an account</a> or <a href="{{ url_for('auth.login') }}">log in</a> to get started. Then head to the <a href="{{ url_for('sailing.upload_gpx') }}">upload page</a> to add your first GPX file.
+                        Ready to analyze your sailing performance? <a href="{{ url_for('auth.register') }}">Create an account</a> or <a href="{{ url_for('auth.login') }}">log in</a> to get started. Then head to the <a href="{{ url_for('races.upload_race') }}">upload page</a> to add your first GPX file.
                     </p>
                 </div>
             </div>
