--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -31,10 +31,10 @@
                         <a class="nav-link" href="{{ url_for('main.dashboard') }}">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('sailing.list_sessions') }}">My Sessions</a>
+                        <a class="nav-link" href="{{ url_for('races.list_races') }}">My Races</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('sailing.upload_gpx') }}">Upload GPX</a>
+                        <a class="nav-link" href="{{ url_for('races.upload_race') }}">Upload Race</a>
                     </li>
                     {% endif %}
                 </ul>
